nested templating test.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+{{ define "index" }}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noodles Profile</title>
 </head>
-<body>
-    Hello
-</body>
+<body>{{ template "body" }}</body>
 </html>
+{{ end }}
