--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noodles Profile</title>
 </head>
-<body>{{ template "body" }}</body>
+<body>
+    {{ .Word }}
+    {{ template "body" }}
+</body>
 </html>
 {{ end }}
