template parsing tree.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Noodles Profile</title>
 </head>
 <body>
-    {{ .Word }}
-    {{ template "body" }}
-</body>
+    hello {{ .Word }}
+    <!-- {{ template "body" }}
+ --></body>
 </html>
 {{ end }}
